--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,62 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Header {
+  height: fit-content;
+  width: 100%;
+  padding: 15px 5%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.profile-bar {
+margin-bottom: 1em;
+}
+
+.greetings {
+  margin-bottom: 0.6em;
+}
+
+.Gallery {
+  display: grid;
+  grid-template-columns: auto;
+  gap: 1em;
+  padding: 15px 5%;
+}
+
+@media screen and (min-width: 480px) {
+  .profile-bar {
+display: flex;
+justify-content: space-between;
+align-items: center;
+  }
+
+  .greetings {
+    margin-bottom: 0;
+    margin-right: 1em;
+  }
+
+  .Gallery {
+    grid-template-columns: auto auto;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (min-width: 768px) {
+  .Header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
-  to {
-    transform: rotate(360deg);
+
+  .profile-bar {
+    margin-bottom: 0;
+      }
+
+  .Gallery {
+    grid-template-columns: auto auto auto;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .Gallery {
+    grid-template-columns: auto auto auto auto;
   }
 }
