--- a/src/App.css
+++ b/src/App.css
@@ -17,16 +17,37 @@
 }
 
 .Gallery {
+  padding: 15px 5%;
+}
+
+.search-input {
+  padding: 10px;
+  width: 100%;
+  max-width: 400px;
+  border-radius: 10px;
+  border: 1px solid peru;
+}
+
+.heading {
+  margin: 1em 0;
+  /* text-align: left; */
+}
+
+.Gallery-inner {
   display: grid;
   grid-template-columns: auto;
   gap: 1em;
-  padding: 15px 5%;
+}
+
+.Gallery-item img {
+  max-height: 300px;
+  cursor: grab;
 }
 
 @media screen and (min-width: 480px) {
   .profile-bar {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
   }
 
@@ -35,29 +56,23 @@
     margin-right: 1em;
   }
 
-  .Gallery {
+  .Gallery-inner {
     grid-template-columns: auto auto;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .Header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
   .profile-bar {
     margin-bottom: 0;
   }
 
-  .Gallery {
+  .Gallery-inner {
     grid-template-columns: auto auto auto;
   }
 }
 
 @media screen and (min-width: 1024px) {
-  .Gallery {
+  .Gallery-inner {
     grid-template-columns: auto auto auto auto;
   }
 }
