--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,12 @@ h6 {
   line-height: 1em;
   font-weight: 700;
 }
+
+button {
+  padding: 0.5em 1em;
+  cursor: pointer;
+  background-color: peru;
+  border: 0;
+  border-radius: 5px;
+  color: white;
+}
