--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,26 @@
   /* text-align: left; */
 }
 
+.loader {
+  margin: 30px auto;
+  border: 16px solid #c0bfbf;
+  border-radius: 50%;
+  border-top: 16px solid peru;
+  border-bottom: 16px solid peru;
+  width: 40px;
+  height: 40px;
+  -webkit-animation: spin 1.5s linear infinite;
+  animation: spin 2s linear infinite;
+}
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 .Gallery-inner {
   display: grid;
   grid-template-columns: auto;
