--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,10 @@
   margin-bottom: 0.6em;
 }
 
+.greetings2 {
+  margin-top: 0.6em;
+}
+
 .Gallery {
   padding: 15px 5%;
 }
@@ -82,6 +86,11 @@
   .greetings {
     margin-bottom: 0;
     margin-right: 1em;
+  }
+
+  .greetings2 {
+    margin-top: 0;
+    margin-left: 1em;
   }
 
   .Gallery-inner {
